	creates XSUBs for C constants.

	* Makefile.PL: Use Gtk2::CodeGen->generate_constants_wrappers to
	wrap constants specified in files named constants-x.y.

	* Gtk2.pm
	* t/version-checks.t: Use Exporter to handle version checking and
	exporting.  Test.

	* constants-2.0
	* Gtk2.pm
	* t/00.Gtk2.t: Export GTK_PRIORITY_RESIZE, GDK_PRIORITY_EVENTS,
	and GDK_PRIORITY_REDRAW.

2008-06-21  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkIconView.t: Fix test failures by not running certain
	unreliable tests.  Also avoid running unnecessary main loops.

2008-06-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkWidget.xs: Document why signal_chain_from_overridden
	doesn't quite work when used in a size-request handler.  Patch by
	Kevin Ryde.

	* xs/GtkGC.xs
	* t/GtkGC.t: Automatically handle releasing of GCs returned by
	Gtk2::GC->get.  Patch by muppet, idea and initial implementation
	by Kevin Ryde.

	* xs/GdkEvent.xs (gtk2perl_gdk_event_set_state)
	(gtk2perl_gdk_event_set_time): Handle the new GDK_DAMAGE type.

	* t/GdkEvent.t: Provide Gtk2::Gdk::Event::GrabBroken::implicit and
	grab_window accessors.  Patch by Kevin Ryde.

	* xs/GtkAdjustment.xs: Improve the documentation for the
	accessors.  Patch by Kevin Ryde.

2008-05-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkRecentChooser.t
	* t/GtkRecentManager.t: Fix test failures due to the asynchronous
	nature of the manager's add_item().

2008-05-23  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkTreeModelFilter.t
	* xs/GtkTreeModelFilter.xs: Fix the marshalling of modify
	callbacks.  Technically, this is an API change since an input
	argument turned into a return value.  The previous version was not
	usable, however, so nothing should be affected by this.  If this
	change does break your code, please let us know.  Patch by Kevin
	Ryde.

2008-05-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* t/GdkProperty.t
	* xs/GdkProperty.xs: Overload '!=' for GdkAtoms.  Patch by Kevin
	Ryde.
