@@ -15,6 +15,10 @@
 	* t/00.Gtk2.t: Export GTK_PRIORITY_RESIZE, GDK_PRIORITY_EVENTS,
 	and GDK_PRIORITY_REDRAW.
 
+	* constants-2.0
+	* Gtk2.pm
+	* t/00.Gtk2.t: Export GDK_CURRENT_TIME.
+
 2008-06-21  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	* t/GtkIconView.t: Fix test failures by not running certain
